Adding ui-login and code-data libs serverside communication

--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,12 @@
     },
     "material": {
       "tags": []
+    },
+    "code-data": {
+      "tags": []
+    },
+    "ui-login": {
+      "tags": []
     }
   }
 }
