Switchig code-data lib with core-data lib and adding projects service

--- a/nx.json
+++ b/nx.json
@@ -17,13 +17,13 @@
     "material": {
       "tags": []
     },
-    "code-data": {
-      "tags": []
-    },
     "ui-login": {
       "tags": []
     },
     "ui-toolbar": {
+      "tags": []
+    },
+    "core-data": {
       "tags": []
     }
   }
