--- a/angular.json
+++ b/angular.json
@@ -163,37 +163,6 @@
         }
       }
     },
-    "code-data": {
-      "root": "libs/code-data",
-      "sourceRoot": "libs/code-data/src",
-      "projectType": "library",
-      "prefix": "workshop",
-      "architect": {
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "libs/code-data/src/test.ts",
-            "tsConfig": "libs/code-data/tsconfig.spec.json",
-            "karmaConfig": "libs/code-data/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "libs/code-data/tsconfig.lib.json",
-              "libs/code-data/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**"]
-          }
-        }
-      },
-      "schematics": {
-        "@nrwl/schematics:component": {
-          "styleext": "scss"
-        }
-      }
-    },
     "ui-login": {
       "root": "libs/ui-login",
       "sourceRoot": "libs/ui-login/src",
@@ -245,6 +214,37 @@
             "tsConfig": [
               "libs/ui-toolbar/tsconfig.lib.json",
               "libs/ui-toolbar/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/schematics:component": {
+          "styleext": "scss"
+        }
+      }
+    },
+    "core-data": {
+      "root": "libs/core-data",
+      "sourceRoot": "libs/core-data/src",
+      "projectType": "library",
+      "prefix": "workshop",
+      "architect": {
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "libs/core-data/src/test.ts",
+            "tsConfig": "libs/core-data/tsconfig.spec.json",
+            "karmaConfig": "libs/core-data/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/core-data/tsconfig.lib.json",
+              "libs/core-data/tsconfig.spec.json"
             ],
             "exclude": ["**/node_modules/**"]
           }
