--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "baseUrl": ".",
     "paths": {
       "@workshop/material": ["libs/material/src/index.ts"],
-      "@workshop/code-data": ["libs/code-data/src/index.ts"],
       "@workshop/ui-login": ["libs/ui-login/src/index.ts"],
-      "@workshop/ui-toolbar": ["libs/ui-toolbar/src/index.ts"]
+      "@workshop/ui-toolbar": ["libs/ui-toolbar/src/index.ts"],
+      "@workshop/core-data": ["libs/core-data/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
